--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ install:
   - pip install pygbif rpy2 geopy geopandas
 
   - python setup.py install
-  
+  # see if it works
   - python tests/test_GBIF.py
