--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 sudo: true
 
-language: python
-
 sudo: false
 
 notifications:
@@ -9,8 +7,8 @@ notifications:
     - remenska@gmail.com
 
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y install libgdal-dev
+  - apt-get -qq update
+  - apt-get install -y install libgdal-dev
 
 before_script:
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  
