--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ notifications:
     - remenska@gmail.com
 
 before_install:
-  - apt-get -qq update
-  - apt-get install -y install libgdal-dev
+  - sudo apt-get -qq update
+  - sudo apt-get install -y install libgdal-dev
 
 before_script:
     - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  
