--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get -y install libgdal-dev libgeos-dev
+  - sudo apt-get -y install libgdal-dev 
   #- sudo apt-get -y install r-base
 
 before_script:
@@ -28,7 +28,7 @@ install:
   - conda update -q conda
   - conda info -a # Useful for debugging any issues with conda
   - conda config --add channels http://conda.anaconda.org/NLeSC  
-  - conda create -q -n biodiversity six pandas ipython-notebook scikit-learn git basemap matplotlib xlrd numba rasterio gdal geos python=3
+  - conda create -q -n biodiversity six pandas ipython-notebook scikit-learn git basemap matplotlib xlrd numba rasterio gdal geos libgdal=2.0.0=0 python=3
 
   - source activate biodiversity
 
