--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,10 @@
-sudo: required
+language: python
 
 notifications:
   email:
     - remenska@gmail.com
 
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get -y install libgdal-dev 
   #- sudo apt-get -y install r-base
-
-before_script:
-    - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  
-          export DISPLAY=:99.0; 
-          sh -e /etc/init.d/xvfb start; 
-          sleep 3; 
-      fi
 
 install:
   # Conda
