--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,7 @@ install:
 
   - python setup.py install
   # see if it works
-  - python tests/test_GBIF.py
+  #- python tests/test_GBIF.py
+
+script:  
+  - python tests/test_GBIF.py # for now
