--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 
   - source activate biodiversity
 
-  - pip install pygbif geopy geopandas
+  - pip install pygbif geopy geopandas flake8
 
   - python setup.py install
   # see if it works
