--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ universal = 1
 
 [flake8]
 max-line-length = 120
+
+[build_sphinx]
+source-dir = .
+build-dir  = _build/html
+all_files  = 1
+
+[upload_sphinx]
+upload-dir = docs/build/html
