--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a # Useful for debugging any issues with conda
-  - conda config --add channels http://conda.anaconda.org/NLeSC  
+  - conda config --add channels http://conda.anaconda.org/NLeSC
+  - conda config --add channels defaults
   - conda create -q -n biodiversity six pandas ipython-notebook scikit-learn git basemap matplotlib xlrd numba rasterio gdal geos libgdal=2.0.0=0 krb5 python=3.5
 
   - source activate biodiversity
