--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,14 @@ notifications:
   email:
     - remenska@gmail.com
 
+matrix:
+    include:
+        - python: 2.7
+          env: PYTHON=2.7
+        - python: 3.4
+          env: PYTHON=3.4
   #- sudo apt-get -y install r-base
+
 before_install:
   - sudo apt-get install libproj-dev
 install:
@@ -20,7 +27,7 @@ install:
   - conda info -a # Useful for debugging any issues with conda
   - conda config --add channels http://conda.anaconda.org/NLeSC
   - conda config --add channels defaults
-  - conda create -q -n biodiversity six pandas ipython-notebook scikit-learn git basemap matplotlib xlrd numba rasterio gdal geos libgdal=2.0.0=0 krb5 python=3.4
+  - conda create -q -n biodiversity six pandas ipython-notebook scikit-learn git basemap matplotlib xlrd numba rasterio gdal geos libgdal=2.0.0=0 krb5 python=${PYTHON}
 
   - source activate biodiversity
 
