--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
           env: PYTHON=2.7
         - python: 3.4
           env: PYTHON=3.4
+    allow_failures:
+        - python: 2.7 # for now
   #- sudo apt-get -y install r-base
 
 before_install:
