--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,6 @@ install:
   #- python tests/test_GBIF.py
 
 script:  
-  - python -m unittest tests/test_GBIF.py -v
-  - python -m unittest tests/test_IUCN.py -v
-  - python -m unittest tests/test_environment.py -v
+  - python -m unittest discover -s tests -v
   - python scripts/step1_climate_envelope.py --species-location=data/fish/selection/astatotilapia_burtoni --output-location=data/step1
   - flake8 --max-line-length=120 iSDM/
